@@ -1,5 +1,12 @@
 {{$NEXT}}
 
+- Optimized compile-time operations to make Specio itself quicker to
+  load. Specio's load time is a non-trivial part of the load time of DateTime
+  (and presumably other things that use it). Based on
+  https://github.com/houseabsolute/DateTime.pm/issues/85. Reported by
+  versable.
+
+
 0.42     2017-11-04
 
 - The Perl library claimed it provided types named LaxVersionStr and
